--- a/index.html
+++ b/index.html
@@ -15,4 +15,16 @@
 
 <div id="app"></div>
 
+<script>
+    class App extends React.Component {
+        render() {
+            return (
+                <div className="app-content">
+                    <h1>Hey, Pranath here</h1>
+                </div>
+            )
+        }
+    }
+</script>
+
 </html>
