--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-compatible" content="ie-edge">
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -15,7 +16,7 @@
 
 <div id="app"></div>
 
-<script>
+<script type="text/babel">
     class App extends React.Component {
         render() {
             return (
@@ -25,6 +26,7 @@
             )
         }
     }
+    ReactDOM.render(<App />, document.getElementById('app'));
 </script>
 
 </html>
