--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
 
 <script type="text/babel">
     class App extends React.Component {
+        state = {
+            name: 'Pranath',
+            age: 22
+        }
         render() {
             return (
                 <div className="app-content">
-                    <h1>Hey, Pranath here</h1>
+                    <h1>Hey, Fellas</h1>
+                    <p>My name is {this.state.name} and I am {this.state.age}</p>
                 </div>
             )
         }
