--- a/index.html
+++ b/index.html
@@ -22,11 +22,27 @@
             name: 'Pranath',
             age: 22
         }
+
+        handleClick(e) {
+            console.log(e.target);
+        }
+
+        handleHover(e) {
+            console.log(e.target, e.pageX);
+        }
+
+        handleCopy(e) {
+            console.log('Thats what you are...', e.target);
+        }
+
         render() {
             return (
                 <div className="app-content">
                     <h1>Hey, Fellas</h1>
                     <p>My name is {this.state.name} and I am {this.state.age}</p>
+                    <button onClick={this.handleClick}>Click me</button>
+                    <button onMouseOver={this.handleHover}>Hover me</button>
+                    <p onCopy={this.handleCopy}>What we think, We become!!!</p>
                 </div>
             )
         }
